--- a/airTimeLine/package.json
+++ b/airTimeLine/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-element-dropdown": "^2.5.3",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-stopwatch-timer": "^0.0.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
